// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`describe receipt service should create an entity 1`] = `
Object {
  "aggregate": Object {
    "key": "test",
    "type": "receipt",
  },
  "state": Object {
    "id": "receipt.test",
    "total": 5,
  },
  "type": "receipt",
}
`;

exports[`describe receipt service should load an empty entity 1`] = `
Object {
  "aggregate": Object {
    "key": "test",
    "type": "receipt",
  },
  "revision": "00000000000000000000000000",
  "state": Object {
    "id": "receipt.test",
    "total": 0,
  },
  "type": "receipt",
}
`;

exports[`describe receipt service should load an entity with existing events 1`] = `
Object {
  "aggregate": Object {
    "key": "test",
    "type": "receipt",
  },
  "state": Object {
    "id": "receipt.test",
    "total": 10,
  },
  "type": "receipt",
}
`;

exports[`describe receipt service should update an entity 1`] = `
Object {
  "aggregate": Object {
    "key": "test",
    "type": "receipt",
  },
  "state": Object {
    "id": "receipt.test",
    "total": 15,
  },
  "type": "receipt",
}
`;
